--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-scrollable-anchor": "^0.6.1",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
